# talana-api

./: .dockerignore  .editorconfig  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
talana/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
talana/apps/api/: apps.py  urls.py
talana/apps/api/users/: serializers.py  urls.py  views.py
talana/apps/core/: admin.py  apps.py  backends.py  managers.py  models.py  tasks.py  urls.py  views.py
talana/apps/core/migrations/: 0001_initial.py
talana/apps/core/templates/core/: set-user-password.html
talana/apps/utils/: apps.py  mail.py  managers.py  models.py  random.py  request.py  tokens.py
talana/apps/utils/templates/utils/: verification-email.html  verification-email.txt
utility/: celeryd  nginx.conf  uwsgi.ini
